# kindle-information-radiator

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.sh  config.example.toml
kual/: config.xml  menu.json
src/: fb.rs  ical.rs  input.rs  main.rs  render.rs  taxi.rs  weather.rs
