[package]
name = "weather-kindle"
version = "0.1.0"
edition = "2021"

[dependencies]
minreq = { version = "2", default-features = false, features = ["https-rustls", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10", default-features = false }
rrule = "0.13"
resvg = "0.45"
png = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
